syntax = "proto3";

package example;

message UserContact {
	string name = 1;

	enum ContactType {
		EMAIL = 0;
		PHONE = 1;
	}

	message Contact{
		oneof contact_info {
			string email = 2;
			string phone = 3;
		}
	}
}
